--- a/contact.html
+++ b/contact.html
@@ -24,19 +24,33 @@
                 <li><a href="/index.html#exp" class="nav-link">Experience</a></li>
                 <li><a href="/index.html#proj" class="nav-link">Projects</a></li>
                 <li><a href="/index.html#skills" class="nav-link">Skills</a></li>
-                <!--<li><a href="/contact.html" class="nav-link">Contact</a></li>-->
+                <li><a href="/contact.html" class="nav-link">Contact</a></li>
             </ul>
 
             <!--Mobile-->
             <ul class="navigation2">
-                <!--<li><a href="/contact.html" class="nav-link">Contact</a></li>-->
+                <li><a href="/contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <button type="button" class="btn topBtn" style="min-width: 170px;margin-left: 4em;margin-top: 2em;" onclick="location.href='https://jayshinde.dev/index.html'">
+            <span>&larr; Back to Home</span>
+        </button>
+        <!--Bulk Project Section-->
+        <section class="project-flex tag f box">
+            <h2>Contact Me</h2>
 
+            <form action="https://getform.io/f/c905afcc-593b-411a-9727-96d9d587ea1a" method="POST">
+                <input type="text" name="name">
+                <input type="email" name="email">
+                <input type="text" name="message">
+                <button type="submit">Send</button>
+            </form>
 
+            
+        </section>
 
         <div style="text-align: center;">
             <button class="btn topBtn" onclick="window.scrollTo({top: 0})">
