--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,10 @@
             <h2>Contact Me</h2>
 
             <form action="https://getform.io/f/c905afcc-593b-411a-9727-96d9d587ea1a" method="POST">
-                <input type="text" name="name">
-                <input type="email" name="email">
-                <input type="text" name="message">
+                <input type="text" name="Name" placeholder="Name" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="text" name="Subject (Optional)">
+                <input type="text" name="Message" required>
                 <button type="submit">Send</button>
             </form>
 
