--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
             <form action="https://getform.io/f/c905afcc-593b-411a-9727-96d9d587ea1a" method="POST">
                 <input type="text" name="Name" placeholder="Name" required>
                 <input type="email" name="email" placeholder="Email" required>
-                <input type="text" name="Subject (Optional)">
-                <input type="text" name="Message" required>
+                <input type="text" name="subject" placeholder="Subject (Optional)">
+                <input type="text" name="message" placeholder="Message" required>
                 <button type="submit">Send</button>
             </form>
 
