--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
             <h2>Contact Me</h2>
 
             <form action="https://getform.io/f/c905afcc-593b-411a-9727-96d9d587ea1a" method="POST">
-                <input type="text" name="Name" placeholder="Name" required>
+                <input type="text" name="name" placeholder="Name" required>
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="text" name="subject" placeholder="Subject (Optional)">
                 <input type="text" name="message" placeholder="Message" required>
