--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,11 @@
             <h2>Contact Me</h2>
 
             <form action="https://getform.io/f/c905afcc-593b-411a-9727-96d9d587ea1a" method="POST">
-                <input type="text" name="name" placeholder="Name" required>
-                <input type="email" name="email" placeholder="Email" required>
-                <input type="text" name="subject" placeholder="Subject (Optional)">
-                <input type="text" name="message" placeholder="Message" required>
-                <button type="submit">Send</button>
+                <input class="contactField" type="text" name="name" placeholder="Name" required>
+                <input class="contactField" type="email" name="email" placeholder="Email" required>
+                <input class="contactField" type="text" name="subject" placeholder="Subject (Optional)">
+                <input class="contactFieldLong" type="text" name="message" placeholder="Message" required>
+                <button class="btn blueBtn" type="submit">Send</button>
             </form>
 
             
