--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,9 @@
                 <input class="contactField" type="email" name="email" placeholder="Email" required>
                 <input class="contactField" type="text" name="subject" placeholder="Subject (Optional)">
                 <input class="contactFieldLong" type="text" name="message" placeholder="Message" required>
-                <button class="btn blueBtn" type="submit">Send</button>
+                <button class="btn blueBtn" style="min-width: 170px;" type="submit">
+                    <span>Send &rarr;</span>
+                </button>
             </form>
 
             
