--- a/contact.html
+++ b/contact.html
@@ -42,16 +42,17 @@
         <section class="project-flex tag f box">
             <h2>Contact Me</h2>
 
-            <form action="https://getform.io/f/c905afcc-593b-411a-9727-96d9d587ea1a" method="POST">
-                <input class="contactField" type="text" name="name" placeholder="Name" required>
-                <input class="contactField" type="email" name="email" placeholder="Email" required>
-                <input class="contactField" type="text" name="subject" placeholder="Subject (Optional)">
-                <input class="contactFieldLong" type="text" name="message" placeholder="Message" required>
-                <button class="btn blueBtn" style="min-width: 170px;" type="submit">
-                    <span>Send &rarr;</span>
-                </button>
-            </form>
-
+            <div class="container">
+                <form action="https://getform.io/f/c905afcc-593b-411a-9727-96d9d587ea1a" method="POST">
+                    <input class="contactField" type="text" name="name" placeholder="Name" required>
+                    <input class="contactField" type="email" name="email" placeholder="Email" required>
+                    <input class="contactField" type="text" name="subject" placeholder="Subject (Optional)">
+                    <input class="contactFieldLong" type="text" name="message" placeholder="Message" required>
+                    <button class="btn blueBtn" style="min-width: 170px;" type="submit">
+                        <span>Send &rarr;</span>
+                    </button>
+                </form>
+            </div>
             
         </section>
 
