--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
             <h2>Contact Me</h2>
 
             <div class="container">
-                <form action="https://getform.io/f/c905afcc-593b-411a-9727-96d9d587ea1a" method="POST">
+                <form name="contact" netlify method="POST">
                     <input class="contactField" type="text" name="name" placeholder="Name" required>
                     <input class="contactField" type="email" name="email" placeholder="Email" required>
                     <input class="contactField" type="text" name="subject" placeholder="Subject (Optional)">
