--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,8 @@
                     <input class="contactField" type="email" name="email" placeholder="Email" required>
                     <input class="contactField" type="text" name="subject" placeholder="Subject (Optional)">
                     <input class="contactFieldLong" type="text" name="message" placeholder="Message" required>
-                    <div data-netlify-recaptcha="true"></div>
-                    <button class="btn blueBtn" style="min-width: 170px;" type="submit">
+                    <div data-netlify-recaptcha="true" style="justify-self: center;align-self: center;"></div>
+                    <button class="btn blueBtn" style="min-width: 170px;justify-self: center;align-self: center;" type="submit">
                         <span>Send &rarr;</span>
                     </button>
                 </form>
