--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
             <h2>Contact Me</h2>
 
             <div class="container">
-                <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" >
+                <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true" style="text-align:center">
                     <input class="contactField" type="text" name="name" placeholder="Name" required>
                     <input class="contactField" type="email" name="email" placeholder="Email" required>
                     <input class="contactField" type="text" name="subject" placeholder="Subject (Optional)">
