--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                     <input class="contactField" type="text" name="name" placeholder="Name" required>
                     <input class="contactField" type="email" name="email" placeholder="Email" required>
                     <input class="contactField" type="text" name="subject" placeholder="Subject (Optional)">
-                    <textarea rows="10" class="contactFieldLong" type="text" name="message" placeholder="Message" required>
+                    <textarea rows="10" class="contactField" type="text" name="message" placeholder="Message" required></textarea>
                     <div data-netlify-recaptcha="true" style="display: flex;justify-content: center;align-content: center;"></div>
                     <button class="btn blueBtn" style="min-width: 170px;"" type="submit">
                         <span>Send &rarr;</span>
