--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                     <input class="contactField" type="email" name="email" placeholder="Email" required>
                     <input class="contactField" type="text" name="subject" placeholder="Subject (Optional)">
                     <textarea rows="10" class="contactField" type="text" name="message" placeholder="Message" required></textarea>
-                    <div data-netlify-recaptcha="true" style="display: flex;justify-content: center;align-content: center;"></div>
+                    <div data-netlify-recaptcha="true" style="display: flex;justify-content: center;align-content: center;padding-top: 2em;padding-bottom: 1em;"></div>
                     <button class="btn blueBtn" style="min-width: 170px;"" type="submit">
                         <span>Send &rarr;</span>
                     </button>
