--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
     <main>
         <button type="button" class="btn topBtn" style="min-width: 170px;margin-left: 4em;margin-top: 2em;" onclick="location.href='https://jayshinde.dev/index.html'">
-            <span>&larr; Back to Home</span>
+            <span>&#10094; Back to Home</span>
         </button>
         <!--Bulk Project Section-->
         <section class="project-flex tag f box">
