--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
             </ul>
 
             <!--Mobile-->
+            <div class="mobileMenu">
+                <div class="mobileLinks">
+                    <a href="/index.html#about" class="nav-link">About Me</a>
+                    <a href="/index.html#edu" class="nav-link">Education</a>
+                    <a href="/index.html#exp" class="nav-link">Experience</a>
+                    <a href="/index.html#proj" class="nav-link">Projects</a>
+                    <a href="/index.html#skills" class="nav-link">Skills</a>
+                    <a href="/contact.html" class="nav-link">Contact</a>
+                </div>
+                <a href="javascript:void(0);" class="hamburgerMenu" onclick="mobileDropdownFunction()">
+                    <i class="fa fa-bars"></i>
+                  </a>
+            </div>
             <ul class="navigation2">
                 <li><a href="/contact.html" class="nav-link">Contact</a></li>
             </ul>
