--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="/contact.html" class="nav-link">Contact</a>
                 </div>
                 <a href="javascript:void(0);" class="hamburgerMenu" onclick="mobileDropdownFunction()">
-                    <i class="fa fa-bars"></i>
+                    <ion-icon name="menu-outline"></ion-icon>
                   </a>
             </div>
             <ul class="navigation2">
