--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         <!--Mobile-->
         <div class="mobileMenu">
-            <div class="mobileLinks">
+            <div id="mobileLinks">
                 <a href="/index.html#about" class="nav-link">About Me</a>
                 <a href="/index.html#edu" class="nav-link">Education</a>
                 <a href="/index.html#exp" class="nav-link">Experience</a>
