--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="/index.html#skills" class="nav-link">Skills</a>
                 <a href="/contact.html" class="nav-link">Contact</a>
             </div>
-            <a href="javascript:void(0);" class="hamburgerMenu" onclick="mobileDropdownFunction()">
+            <a href="#" class="hamburgerMenu" onclick="mobileDropdownFunction()">
                 <ion-icon name="menu-outline"></ion-icon>
               </a>
         </div>
