--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="/contact.html" class="nav-link">Contact</a></li>
             </ul>
             <!--Mobile-->
-            <div class="mobileMenu">
+            <div class="mobileMenu"><!--
                 <div id="mobileLinks">
                     <a href="/index.html#about" class="nav-link">About Me</a>
                     <a href="/index.html#edu" class="nav-link">Education</a>
@@ -34,7 +34,7 @@
                     <a href="/index.html#proj" class="nav-link">Projects</a>
                     <a href="/index.html#skills" class="nav-link">Skills</a>
                     <a href="/contact.html" class="nav-link">Contact</a>
-                </div>
+                </div>-->
                 <a href="#" class="hamburgerMenu" onclick="mobileDropdownFunction()">
                     <ion-icon name="menu-outline"></ion-icon>
                   </a>
@@ -43,6 +43,16 @@
     </header>
 
     <main>
+        <<div class="mobileMenu">
+            <div id="mobileLinks">
+                <a href="/index.html#about" class="nav-link">About Me</a>
+                <a href="/index.html#edu" class="nav-link">Education</a>
+                <a href="/index.html#exp" class="nav-link">Experience</a>
+                <a href="/index.html#proj" class="nav-link">Projects</a>
+                <a href="/index.html#skills" class="nav-link">Skills</a>
+                <a href="/contact.html" class="nav-link">Contact</a>
+            </div>
+        </div>
         <!--About Me-->
         <section class="aboutme-flex" id="about">
 
