--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 </div>-->
                 <a href="#" class="hamburgerMenu" onclick="mobileDropdownFunction()">
                     <ion-icon name="menu-outline"></ion-icon>
-                  </a>
+                </a>
             </div>
         </nav>  
     </header>
 
     <main>
-        <<div class="mobileMenu">
+        <div class="mobileMenu">
             <div id="mobileLinks">
                 <a href="/index.html#about" class="nav-link">About Me</a>
                 <a href="/index.html#edu" class="nav-link">Education</a>
