--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <main>
         <div class="mobileMenu">
             <div id="mobileLinks">
-                <a href="/index.html#about" class="nav-link">About Me</a>
-                <a href="/index.html#edu" class="nav-link">Education</a>
-                <a href="/index.html#exp" class="nav-link">Experience</a>
-                <a href="/index.html#proj" class="nav-link">Projects</a>
-                <a href="/index.html#skills" class="nav-link">Skills</a>
-                <a href="/contact.html" class="nav-link">Contact</a>
+                <a href="/index.html#about" class="mobile-link">About Me</a>
+                <a href="/index.html#edu" class="mobile-link">Education</a>
+                <a href="/index.html#exp" class="mobile-link">Experience</a>
+                <a href="/index.html#proj" class="mobile-link">Projects</a>
+                <a href="/index.html#skills" class="mobile-link">Skills</a>
+                <a href="/contact.html" class="mobile-link">Contact</a>
             </div>
         </div>
         <!--About Me-->
