--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
             <!--Mobile-->
             <a href="#" class="hamburgerMenu" onclick="mobileDropdownFunction()">
-                <ion-icon name="menu-outline"></ion-icon>
+                <ion-icon size="large" name="menu-outline"></ion-icon>
             </a>
         </nav>  
     </header>
