--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <main>
         <div class="mobileMenu">
             <div id="mobileLinks">
-                <a href="/index.html#about" class="mobile-link">About Me</a>
-                <a href="/index.html#edu" class="mobile-link">Education</a>
-                <a href="/index.html#exp" class="mobile-link">Experience</a>
-                <a href="/index.html#proj" class="mobile-link">Projects</a>
-                <a href="/index.html#skills" class="mobile-link">Skills</a>
-                <a href="/contact.html" class="mobile-link">Contact</a>
+                <a href="/index.html#about" class="mobile-link" onclick="mobileDropdownFunction()">About Me</a>
+                <a href="/index.html#edu" class="mobile-link" onclick="mobileDropdownFunction()">Education</a>
+                <a href="/index.html#exp" class="mobile-link" onclick="mobileDropdownFunction()">Experience</a>
+                <a href="/index.html#proj" class="mobile-link" onclick="mobileDropdownFunction()">Projects</a>
+                <a href="/index.html#skills" class="mobile-link" onclick="mobileDropdownFunction()">Skills</a>
+                <a href="/contact.html" class="mobile-link" onclick="mobileDropdownFunction()">Contact</a>
             </div>
         </div>
         <!--About Me-->
