--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <main>
         <div class="mobileMenu">
-            <div id="mobileLinks">
+            <div id="mobileLinks" style="text-align: center;">
                 <a href="/index.html#about" class="mobile-link" onclick="mobileDropdownFunction()">About Me</a>
                 <a href="/index.html#edu" class="mobile-link" onclick="mobileDropdownFunction()">Education</a>
                 <a href="/index.html#exp" class="mobile-link" onclick="mobileDropdownFunction()">Experience</a>
