--- a/project-formula1.html
+++ b/project-formula1.html
@@ -28,13 +28,23 @@
             </ul>
 
             <!--Mobile-->
-            <ul class="navigation2">
-                <li><a href="/contact.html" class="nav-link">Contact</a></li>
-            </ul>
+            <a href="#" class="hamburgerMenu" onclick="mobileDropdownFunction()">
+                <ion-icon name="menu-outline" class="menuIcon"></ion-icon>
+            </a>
         </nav>
     </header>
 
     <main>
+        <div class="mobileMenu">
+            <div id="mobileLinks" style="text-align: center;">
+                <a href="/index.html#about" class="mobile-link" onclick="mobileDropdownFunction()">About Me</a>
+                <a href="/index.html#edu" class="mobile-link" onclick="mobileDropdownFunction()">Education</a>
+                <a href="/index.html#exp" class="mobile-link" onclick="mobileDropdownFunction()">Experience</a>
+                <a href="/index.html#proj" class="mobile-link" onclick="mobileDropdownFunction()">Projects</a>
+                <a href="/index.html#skills" class="mobile-link" onclick="mobileDropdownFunction()">Skills</a>
+                <a href="/contact.html" class="mobile-link" onclick="mobileDropdownFunction()">Contact</a>
+            </div>
+        </div>
         <button type="button" class="btn topBtn" style="min-width: 170px;margin-left: 4em;margin-top: 2em;" onclick="location.href='https://jayshinde.dev/#proj'">
             <span>&larr; Back to Projects</span>
         </button>
