--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body> 
-    <header id="home responsive">
+    <header id="home">
         <nav>
             <!--Default NavBar-->
             <h1><a href="/index.html">Jay Shinde</a></h1>
