--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 <a href="/contact.html" class="mobile-link" onclick="mobileDropdownFunction()">Contact</a>
             </div>
         </div>
+
+        <div class="limitedWidth">
         <!--About Me-->
         <section class="aboutme-flex" id="about">
 
@@ -207,6 +209,8 @@
             <button class="btn topBtn" onclick="window.scrollTo({top: 0})">
                 <span>Back to Top</span>
             </button>
+        </div>
+
         </div>
     </main>
 
