--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <div class="limitedWidth" style="text-align: center;">
+        <div class="limitedWidth" style="align-self: center;">
         <!--About Me-->
         <section class="aboutme-flex" id="about">
 
