--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <div class="limitedWidth" style="display: flex; flex-direction: column; justify-self: center;">
+        <div class="limitedWidth" style="margin: auto;">
         <!--About Me-->
         <section class="aboutme-flex" id="about">
 
