--- a/project-formula1.html
+++ b/project-formula1.html
@@ -42,7 +42,7 @@
                 <a href="/index.html#exp" class="mobile-link" onclick="mobileDropdownFunction()">Experience</a>
                 <a href="/index.html#proj" class="mobile-link" onclick="mobileDropdownFunction()">Projects</a>
                 <a href="/index.html#skills" class="mobile-link" onclick="mobileDropdownFunction()">Skills</a>
-                <a href="/contact.html" class="mobile-link" onclick="mobileDropdownFunction()">Contact</a>
+                <a href="/contact.html" class="mobile-link">Contact</a>
             </div>
         </div>
         <button type="button" class="btn topBtn" style="min-width: 170px;margin-left: 4em;margin-top: 2em;" onclick="location.href='https://jayshinde.dev/#proj'">
