--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="/index.html#exp" class="mobile-link" onclick="mobileDropdownFunction()">Experience</a>
                 <a href="/index.html#proj" class="mobile-link" onclick="mobileDropdownFunction()">Projects</a>
                 <a href="/index.html#skills" class="mobile-link" onclick="mobileDropdownFunction()">Skills</a>
-                <a href="/contact.html" class="mobile-link" onclick="mobileDropdownFunction()">Contact</a>
+                <a href="/contact.html" class="mobile-link">Contact</a>
             </div>
         </div>
 
