--- a/project-formula1.html
+++ b/project-formula1.html
@@ -45,33 +45,36 @@
                 <a href="/contact.html" class="mobile-link">Contact</a>
             </div>
         </div>
-        <button type="button" class="btn topBtn" style="min-width: 170px;margin-left: 4em;margin-top: 2em;" onclick="location.href='https://jayshinde.dev/#proj'">
-            <span>&larr; Back to Projects</span>
-        </button>
-        <!--Bulk Project Section-->
-        <section class="project-flex tag f box">
-            <h2>Formula 1 Standings Predictions</h2>
 
-            <button class="btn blueBtn" id="f1repo" style="min-width: 150px;margin-top: 1em;margin-bottom: 1em;align-self: center;justify-self: center;" onclick="window.open('https://github.com/jshinde842/Formula-1-Standings-Predictions', '_blank')">
-                <span>Repository</span>
+        <div class="limitedWidth" style="margin: auto;">
+            <button type="button" class="btn topBtn" style="min-width: 170px;margin-left: 4em;margin-top: 2em;" onclick="location.href='https://jayshinde.dev/#proj'">
+                <span>&larr; Back to Projects</span>
             </button>
+            <!--Bulk Project Section-->
+            <section class="project-flex tag f box">
+                <h2>Formula 1 Standings Predictions</h2>
 
-            <!--Project Info-->
-            <div class="f2">
-                <h3>Tech Stack: Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</h3>
-                <p>
-                    Placeholder project information
-                </p>
+                <button class="btn blueBtn" id="f1repo" style="min-width: 150px;margin-top: 1em;margin-bottom: 1em;align-self: center;justify-self: center;" onclick="window.open('https://github.com/jshinde842/Formula-1-Standings-Predictions', '_blank')">
+                    <span>Repository</span>
+                </button>
+
+                <!--Project Info-->
+                <div class="f2">
+                    <h3>Tech Stack: Jupyter Notebook, Python, Julia, NumPy, Pandas, MatPlotLib, SciKit-Learn</h3>
+                    <p>
+                        Placeholder project information
+                    </p>
+                </div>
+            </section>
+
+            <div style="text-align: center;">
+                <button class="btn topBtn" onclick="window.scrollTo({top: 0})">
+                    <span>Back to Top</span>
+                </button>
             </div>
-        </section>
-
-        <div style="text-align: center;">
-            <button class="btn topBtn" onclick="window.scrollTo({top: 0})">
-                <span>Back to Top</span>
-            </button>
-        </div>
-    </main>
-
+        </main>
+    </div>
+    
     <footer>
         <div style="text-align: center; color: var(--bg-color2)">
             &copy; Copyright 2022 Jay Shinde
