--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="proj-project-flex f2">
                 <h3 style="min-width: 250px;">Budgeting Calculator</h3>
                 <div>
-                    <p class="f3">I made this script to help me and possibly you to budget your finances a little better using the 50/30/20 Rule. This tool uses 2022 Tax Information and includes factors in calculation of any 401(k) contributions the user may have in providing the resulting budget allowances.
+                    <p class="f3">Financial Budgeting Tool using the 50/30/20 rule meant to define proper income allowances into several buckets: Wants, Needs, Savings, and Investment Accounts. This script is not meant as financial advice and should be used purely as insight into what a foundational budget may look like.
                     </p>
                 </div>
                 <button class="btn blueBtn" style="min-width: 180px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/budgetcalc.html';"-->
@@ -164,7 +164,7 @@
             <div class="proj-project-flex f2">
                 <h3 style="min-width: 250px;">Formula 1 Standings Predictions</h3>
                 <div>
-                    <p class="f3"> Analysis of past Formula 1 Championship driver standings using machine learning to predict future performance of drivers and an exploration in whether or not external bias may affect the model.
+                    <p class="f3"> Analysis of past Formula 1 Championship driver standings through supervised machine learning to predict future performance of drivers and an exploration into external bias that may influence the models created.
                     </p>
                 </div>
                 <button class="btn blueBtn" style="min-width: 180px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="location.href='https://jayshinde.dev/project-formula1.html';"> <!--onclick="pageDisabledAlert()"-->
