project description updates

--- a/index.html
+++ b/index.html
@@ -176,9 +176,7 @@
             <div class="proj-project-flex f2">
                 <h3 style="min-width: 250px;">Huffman Coding</h3>
                 <div>
-                    <p class="f3">Lossless file compression tool using the Huffman algorithm through an implementation of the Huffman
-                    Coding Tree using data structures. Tool allows for lossless compression and decompression of files containing strings that are converted to/from
-                    ASCII values and encoded/decoded.
+                    <p class="f3">Lossless data compression algorithm implemented using Huffman Coding, an industry standard in compression commonly used in formats like GZIP, BZIP2, PKZIP, etc. Program is a greedy implementation allowing for both compress and uncompress functionality. 
                     </p>
                 </div>
                 <button class="btn blueBtn" style="min-width: 180px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/huffman.html';"-->
