project description updates

--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
             <div class="proj-project-flex f2">
                 <h3 style="min-width: 250px;">Traffic Lights</h3>
                 <div>
-                    <p class="f3">Traffic Controller implementation that simulates a 20-state intersection that gauges traffic to control the traffic
-                        lights. 6-Way intersection flow modeled using sequential and combinational logic.
+                    <p class="f3">Traffic Light Controller simulating a 6-way, 4-street intersection with 20 possible traffic light states. State transitions are defined by sensors that trigger on presence of a vehicle on the street in order to both minimize vehicle time spent at red lights and maximize traffic flow. 
                     </p>
                 </div>
                 <button class="btn blueBtn" style="min-width: 180px;margin-top: 1.5em;align-self: flex-start;justify-self: end;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/trafficlights.html';"-->
