experience description updates

--- a/index.html
+++ b/index.html
@@ -103,13 +103,7 @@
                 <h3 style="min-width: 250px;"><b>VerityStream</b><br><i style="font-size: .8em;"><br>San Diego, CA<br>June 2021 - November 2021</i></h3>
                 <div class="exp-institution-info-flex f2">
                     <p><i>Software Development Intern</i></p>
-                    <p class="f3">At VerityStream, I was on the the Software Development team responsible for maintaining Credential Stream, which is a comprehensive provider lifecycle management solution.
-                    The team and I worked mainly full-stack in which I resolved query errors in the application’s database by creating and updating SQL scripts 
-                    in addition to updating the application user interface to correctly provide necessary access to back end data using
-                    JavaScript and HTML speeding up front-end response times by almost 100%. The features I worked on were deployed over the course of 20 bi-weekly sprints
-                    according to the established Azure DevOps services and schedules we used. On top of development, I was regularly involved in 
-                    project cost-time projections and priority-setting using AGILE methodology resulting in
-                    smooth workflow and communication between teams.
+                    <p class="f3">Developed CredentialStream, a healthcare provider lifecycle management solution built using .NET and Angular frameworks. On an AGILE development cycle managed in Azure DevOps, I developed front-end solutions in HTML, CSS, and JavaScript to add and fix user-friendly UI and increase page responsiveness. Improved load times by over 25% by optimizing content size and compressing data. Improved back-end services in C# by establishing connections to MS SQL Server ensuring proper population of data on the front-end and updates to SQL scripts.
                     </p>
                 </div>
                 <a class="institution-logo" href="https://www.veritystream.com" target="_blank">
