--- a/about-me.html
+++ b/about-me.html
@@ -68,6 +68,7 @@
             &copy; Copyright 2022 Jay Shinde
         </div>
     </footer>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script>
         $(function () {
           var width = 0,
