--- a/about-me.html
+++ b/about-me.html
@@ -52,7 +52,9 @@
             </button>
             <!--Bulk Project Section-->
             <section class="project-flex tag f box">
-                <div id=“flipboard“></div>
+                <div id=“flipboard“>
+                    <iframe width="100%" frameborder="0" height="600px" marginheight="0" marginwidth="0" scrolling="no" src="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share"></iframe>
+                </div>
             </section>
 
             <div style="text-align: center;">
@@ -68,16 +70,5 @@
             &copy; Copyright 2022 Jay Shinde
         </div>
     </footer>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script>
-        $(function () {
-          var width = 0,
-          flipboard = document.getElementById('flipboard');
-          width = flipboard.getBoundingClientRect().width ? flipboard.getBoundingClientRect().width : flipboard.offsetWidth;
-          if (width > 800) {
-            flipboard.innerHTML = '<iframe width="100%" frameborder="0" height="600px" marginheight="0" marginwidth="0" scrolling="no" src="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share"></iframe>'
-          }
-        })();
-      </script>
 </body>
 </html>
