--- a/about-me.html
+++ b/about-me.html
@@ -53,8 +53,7 @@
             <!--Bulk Project Section-->
             <section class="project-flex tag f box">
                 <div id=“flipboard“>
-                    <iframe width="100%" frameborder="0" height="600px" marginheight="0" marginwidth="0" scrolling="no" src="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share"></iframe>
-                </div>
+                    <a data-flip-widget="mag" href="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share">View my Flipboard Magazine.</a>                </div>
             </section>
 
             <div style="text-align: center;">
@@ -70,5 +69,6 @@
             &copy; Copyright 2022 Jay Shinde
         </div>
     </footer>
+    <script src="https://cdn.flipboard.com/web/buttons/js/flbuttons.min.js" type="text/javascript"></script>
 </body>
 </html>
