--- a/about-me.html
+++ b/about-me.html
@@ -53,7 +53,11 @@
             <!--Bulk Project Section-->
             <section class="project-flex tag f box">
                 <div id=“flipboard“>
-                    <a data-flip-widget="mag" href="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share">View my Flipboard Magazine.</a>                </div>
+                    <a data-flip-widget="mag" href="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share">View my Flipboard Magazine.</a>
+                </div>
+                <div id="rounded">
+                    <iframe id="myFB" src="https://flipboard.com/cover/@reitoosogu/all-things-front-end-vrp5psfby"></iframe>
+                </div>
             </section>
 
             <div style="text-align: center;">
