--- a/about-me.html
+++ b/about-me.html
@@ -52,10 +52,10 @@
             </button>
             <!--Bulk Project Section-->
             <section class="project-flex tag f box">
-                <div id=“flipboard“>
+                <div id=“smallFlipboard“>
                     <a data-flip-widget="mag" href="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share">View my Flipboard Magazine.</a>
                 </div>
-                <div id="rounded">
+                <div id="largeFlipboard">
                     <iframe id="myFB" src="https://flipboard.com/cover/@reitoosogu/all-things-front-end-vrp5psfby"></iframe>
                 </div>
             </section>
