--- a/about-me.html
+++ b/about-me.html
@@ -56,7 +56,7 @@
                     <a data-flip-widget="mag" href="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share">View my Flipboard Magazine.</a>
                 </div>
                 <div id="largeFlipboard">
-                    <iframe id="myFB" src="https://flipboard.com/cover/@reitoosogu/all-things-front-end-vrp5psfby"></iframe>
+                    <iframe id="myFB" src="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share"></iframe>
                 </div>
             </section>
 
