--- a/about-me.html
+++ b/about-me.html
@@ -52,11 +52,11 @@
             </button>
             <!--Bulk Project Section-->
             <section class="project-flex tag f box">
-                <div id=“smallFlipboard“>
+                <div class=“smallFlipboard“>
                     <a data-flip-widget="mag" href="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share">View my Flipboard Magazine.</a>
                 </div>
-                <div id="largeFlipboard">
-                    <iframe id="myFB" src="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share"></iframe>
+                <div class="largeFlipboard">
+                    <iframe id="myFB" src="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpy"></iframe>
                 </div>
             </section>
 
