--- a/about-me.html
+++ b/about-me.html
@@ -50,11 +50,15 @@
             <button type="button" class="btn topBtn" style="min-width: 170px;margin-left: 4em;margin-top: 2em;" onclick="location.href='https://jayshinde.dev/index.html'">
                 <span>&larr; Back to Home</span>
             </button>
-            <!--Bulk Project Section-->
+
+
+            <!--Topics-->
             <section class="project-flex tag f box">
-                <div class=“smallFlipboard“>
+                <!--Flipboard integrate-->
+                <div class=“flipboard“>
                     <a data-flip-widget="mag" href="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share">View my Flipboard Magazine.</a>
                 </div>
+                <!--YT Video Grid-->
             </section>
 
             <div style="text-align: center;">
