--- a/about-me.html
+++ b/about-me.html
@@ -57,6 +57,7 @@
                 <!--Flipboard integrate-->
                 <div class=“flipboard“>
                     <a data-flip-widget="mag" href="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share">View my Flipboard Magazine.</a>
+                    <iframe src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
                 </div>
                 <!--YT Video Grid-->
             </section>
