--- a/about-me.html
+++ b/about-me.html
@@ -55,8 +55,9 @@
             <!--Topics-->
             <section class="project-flex tag f box">
                 <!--Flipboard integrate-->
-                <div class=“flipboard“>
-                    <a data-flip-widget="mag" href="https://flipboard.com/@jayshinde2022/jay-s-magazine-6fjssdcpz?from=share&utm_source=flipboard&utm_medium=share">View my Flipboard Magazine.</a>
+                <div class=“smallFlipboard“>
+                    <iframe src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=portrait" frameBorder="0" width="300" height="600" ></iframe>                </div>
+                <div class=“largeFlipboard“>
                     <iframe src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
                 </div>
                 <!--YT Video Grid-->
