--- a/about-me.html
+++ b/about-me.html
@@ -55,10 +55,11 @@
             <!--Topics-->
             <section class="project-flex tag f box">
                 <!--Flipboard integrate-->
-                <div class=“smallFlipboard“>
-                    <iframe src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=portrait" frameBorder="0" width="300" height="600" ></iframe>                </div>
-                <div class=“largeFlipboard“>
-                    <iframe src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
+                <div>
+                    <iframe class=“smallFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=portrait" frameBorder="0" width="300" height="600" ></iframe>
+                </div>
+                <div>
+                    <iframe class=“largeFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
                 </div>
                 <!--YT Video Grid-->
             </section>
@@ -76,6 +77,5 @@
             &copy; Copyright 2022 Jay Shinde
         </div>
     </footer>
-    <script src="https://cdn.flipboard.com/web/buttons/js/flbuttons.min.js" type="text/javascript"></script>
 </body>
 </html>
