--- a/about-me.html
+++ b/about-me.html
@@ -55,11 +55,11 @@
             <!--Topics-->
             <section class="project-flex tag f box">
                 <!--Flipboard integrate-->
-                <div>
+                <!--<div>
                     <iframe class=“smallFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=portrait" frameBorder="0" width="300" height="600" ></iframe>
-                </div>
+                </div>-->
                 <div>
-                    <iframe class=“largeFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
+                    <iframe class=“largeFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=banner" frameBorder="0" ></iframe>
                 </div>
                 <!--YT Video Grid-->
             </section>
