--- a/about-me.html
+++ b/about-me.html
@@ -56,10 +56,10 @@
             <section class="project-flex tag f box">
                 <!--Flipboard integrate-->
                 <div>
-                    <iframe class=“smallFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=portrait" frameBorder="0" width="300" height="600" ></iframe>
+                    <iframe id=“smallFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=portrait" frameBorder="0" width="0" height="0" ></iframe>
                 </div>
                 <div>
-                    <iframe class=“largeFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
+                    <iframe id=“largeFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=banner" frameBorder="0" width="0" height="0" ></iframe>
                 </div>
                 <!--YT Video Grid-->
             </section>
