--- a/about-me.html
+++ b/about-me.html
@@ -77,5 +77,25 @@
             &copy; Copyright 2022 Jay Shinde
         </div>
     </footer>
+
+    <script>
+        let sF = document.getElementById("smallFlipboard");
+        let lF = document.getElementById("largeFlipboard");
+        console.log("test")
+        console.log(screen.width)
+        if (screen.width < 1153) {
+            sF.width = "300";
+            sF.height = "600";
+            lF.width = "0";
+            lF.height = "0";
+            console.log("small")
+        } else {
+            sF.width = "0";
+            sF.height = "0";
+            lF.width = "970";
+            lF.height = "250";
+            console.log("large")
+        }
+    </script>
 </body>
 </html>
