--- a/about-me.html
+++ b/about-me.html
@@ -83,8 +83,8 @@
         let lF = document.getElementById("largeFlipboard");
         console.log("test")
         console.log(screen.width)
-        console.log(lF.getAttribute(width))
-        console.log(lF.width)
+        console.log(document.getElementById("largeFlipboard").getAttribute(width))
+        console.log(document.getElementById("largeFlipboard").width)
         if (screen.width < 1153) {
             sF.width = "300";
             sF.height = "600";
