--- a/about-me.html
+++ b/about-me.html
@@ -56,11 +56,11 @@
             <section class="project-flex tag f box">
                 <!--Flipboard integrate-->
                 <div>
-                    <iframe id=“smallFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=portrait" frameBorder="0" width="0" height="0" ></iframe>
+                    <iframe id=“smallFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=portrait" frameBorder="0" width="450" height="450" ></iframe>
                 </div>
-                <div>
+                <!--<div>
                     <iframe id=“largeFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
-                </div>
+                </div>-->
                 <!--YT Video Grid-->
             </section>
 
