--- a/about-me.html
+++ b/about-me.html
@@ -56,8 +56,7 @@
             <section class="project-flex tag f box">
                 <!--Flipboard integrate-->
                 <div>
-                    <iframe id=“smallFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=portrait" frameBorder="0" width="450" height="450" ></iframe>
-                </div>
+                    <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>                </div>
                 <!--<div>
                     <iframe id=“largeFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
                 </div>-->
