--- a/about-me.html
+++ b/about-me.html
@@ -55,12 +55,12 @@
             <!--Topics-->
             <section class="project-flex tag f box">
                 <!--Flipboard integrate-->
-                <div class="fb">
+                <div class="fbBig">
                     <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
                 </div>
-                <!--<div>
-                    <iframe id=“largeFlipboard“ src="https://flipboard.com/@JayShinde2022/jay-s-magazine-6fjssdcpz/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
-                </div>-->
+                <div class="fbSmall">
+                    <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=portrait" frameBorder="0" width="300" height="600" ></iframe>
+                </div>
                 <!--YT Video Grid-->
             </section>
 
