--- a/about-me.html
+++ b/about-me.html
@@ -54,14 +54,20 @@
 
             <!--Topics-->
             <section class="project-flex tag f box">
-                <!--Flipboard integrate-->
-                <div class="fbBig">
-                    <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
-                </div>
-                <div class="fbSmall">
-                    <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=portrait" frameBorder="0" width="300" height="600" ></iframe>
+
+                <!--Flipboard integratation-->
+                <div>
+                    <div class="fbBig">
+                        <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
+                    </div>
+                    <div class="fbSmall">
+                        <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=portrait" frameBorder="0" width="300" height="600" ></iframe>
+                    </div>
                 </div>
                 <!--YT Video Grid-->
+                <div>
+                    
+                </div>
             </section>
 
             <div style="text-align: center;">
