--- a/about-me.html
+++ b/about-me.html
@@ -53,20 +53,22 @@
 
 
             <!--Topics-->
-            <section class="project-flex tag f box">
-
+            <section class="abtPage-flex tag f box">
+                <div class="abtmeContainer abtContain">
+                    <h2>More About Me</h2>
+                    <p>Here's some topics I find interesting.</p>
+                </div>
                 <!--Flipboard integratation-->
-                <div>
+                <div class="fbContainer abtContain">
                     <div class="fbBig">
                         <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
                     </div>
                     <div class="fbSmall">
                         <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=portrait" frameBorder="0" width="600" height="400" ></iframe>
                     </div>
-
                 </div>
                 <!--YT Video Grid-->
-                <div>
+                <div class="ytContainer abtContain">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLXb2Fsb3qhrCZs9RsgQdaSetdRNnsOFbP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
