--- a/about-me.html
+++ b/about-me.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <!--YT Video Grid-->
-                <div class="ytContainer abtContain">
+                <div class="ytContainer">
                     <iframe width="784" height="441" src="https://www.youtube.com/embed/videoseries?list=PLXb2Fsb3qhrCZs9RsgQdaSetdRNnsOFbP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
