--- a/about-me.html
+++ b/about-me.html
@@ -59,12 +59,12 @@
                     <p>Here's some topics I find interesting.</p>
                 </div>
                 <!--Flipboard integratation-->
-                <div class="fbContainer abtContain">
+                <div class="fbContainer">
                     <div class="fbBig">
                         <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=banner" frameBorder="0" width="970" height="250" ></iframe>
                     </div>
                     <div class="fbSmall">
-                        <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=portrait" frameBorder="0" width="560" height="315" ></iframe>
+                        <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=portrait" frameBorder="0" width="784" height="441" ></iframe>
                     </div>
                 </div>
                 <!--YT Video Grid-->
