--- a/about-me.html
+++ b/about-me.html
@@ -60,6 +60,9 @@
                 </div>
                 <!--Flipboard integratation-->
                 <div class="fbContainer">
+                    <div class="fbVeryBig">
+                        <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=banner" frameBorder="0" width="1700" height="441" ></iframe>
+                    </div>
                     <div class="fbBig">
                         <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=banner" frameBorder="0" width="1100" height="441" ></iframe>
                     </div>
