--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                 </div>
-                <button class="btn blueBtn" style="min-width: 180px;" onclick="pageDisabledAlert()"> <!--onclick="window.location.href='https://jayshinde.dev/more-about-me.html';"-->
+                <button class="btn blueBtn" style="min-width: 180px;" onclick="window.location.href='https://jayshinde.dev/about-me.html';"> 
                     <span>More About Me &rarr;</span>
                 </button>
             </div>
