--- a/about-me.html
+++ b/about-me.html
@@ -56,16 +56,16 @@
             <section class="abtPage-flex tag f box">
                 <div class="abtmeContainer abtContain">
                     <h2>More About Me</h2>
-                    <p style="margin-left:5em;margin-right:5em;">So you want to know more about me? Try looking at some topics I've encountered through my experiences as a student and curious mind. I've curated a collection of videos, magazines, and articles below. Take a look!</p>
+                    <p style="margin-left:5em;margin-right:5em;margin-top:3em;">So you want to know more about me? Try looking at some topics I've encountered through my experiences as a student and curious mind. I've curated a collection of videos, magazines, and articles below. Take a look!</p>
                 </div>
                 <!--YT Video Grid-->
                 <div class="ytContainer">
-                    <h3>Curated Youtube Playlist</h3>
+                    <h3 style="margin-bottom: 3em;">Curated Youtube Playlist</h3>
                     <iframe width="784" height="441" src="https://www.youtube.com/embed/videoseries?list=PLXb2Fsb3qhrCZs9RsgQdaSetdRNnsOFbP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <!--Flipboard integratation-->
                 <div class="fbContainer">
-                    <h3>Curated Magazines and Publications</h3>
+                    <h3 style="margin-bottom: 3em;">Curated Magazines and Publications</h3>
                     <div class="fbVeryBig">
                         <iframe src="https://flipboard.com/@jayshinde2022/my-stories-l1sr2r56y/widget?layout=banner" frameBorder="0" width="1700" height="441" ></iframe>
                     </div>
