--- a/about-me.html
+++ b/about-me.html
@@ -55,7 +55,7 @@
             <!--Topics-->
             <section class="abtPage-flex tag f box">
                 <div class="abtmeContainer abtContain">
-                    <h2 style="margin-left:5em;margin-right:5em;"">More About Me</h2>
+                    <h2 style="margin-left:5em;margin-right:5em;margin-top:3em;"">More About Me</h2>
                     <p>So you want to know more about me?</p>
                     <p style="margin-left:5em;margin-right:5em;margin-top:3em;">Try looking at some topics I've encountered through my experiences as a student and curious mind. I've curated a collection of videos, magazines, and articles below. Take a look!</p>
                 </div>
