--- a/about-me.html
+++ b/about-me.html
@@ -56,8 +56,8 @@
             <section class="abtPage-flex tag f box">
                 <div class="abtmeContainer abtContain">
                     <h2>More About Me</h2>
-                    <p style="max-width: 5em;margin-top:3em;">So you want to know more about me?</p>
-                    <p style="max-width: 5em;margin-top:3em;">Try looking at some topics I've encountered through my experiences as a student and curious mind. I've curated a collection of videos, magazines, and articles below. Take a look!</p>
+                    <p style="max-width: 5em;margin-top:3em;align-self: center; justify-self: center;">So you want to know more about me?</p>
+                    <p style="max-width: 5em;margin-top:3em;align-self: center; justify-self: center;">Try looking at some topics I've encountered through my experiences as a student and curious mind. I've curated a collection of videos, magazines, and articles below. Take a look!</p>
                 </div>
                 <!--YT Video Grid-->
                 <div class="ytContainer">
