--- a/about-me.html
+++ b/about-me.html
@@ -57,7 +57,7 @@
                 <div class="abtmeContainer abtContain">
                     <h2>More About Me</h2>
                     <p class ="marginify" style="margin-top:3em;">So you want to know more about me?</p>
-                    <p class ="marginify" style="margin-top:3em;">Try looking at some topics I've encountered through my experiences as a student and curious mind. I've curated a collection of videos, magazines, and articles below. Take a look!</p>
+                    <p class ="marginify" style="margin-top:3em;">Try looking at some topics I've encountered through curiosity and my experiences as a student. I've curated a collection of videos, magazines, and articles below. <br>Take a look!</p>
                 </div>
                 <!--YT Video Grid-->
                 <div class="ytContainer">
