--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <section class="exp-flex tag f box" id="exp">
             <h2>Experience</h2>
             <!--VerityStream-->
-            <div class="exp-institution-flex f2">
+            <div class="exp-institution-flex">
                 <h3 style="min-width: 250px;"><b>VerityStream</b><br><i style="font-size: .8em;"><br>San Diego, CA<br>June 2021 - November 2021</i></h3>
                 <div class="exp-institution-info-flex f2">
                     <p><i>Software Development Intern</i></p>
@@ -112,9 +112,9 @@
             </div>
 
             <!--Nestle-->
-            <div class="exp-institution-flex f2">
+            <div class="exp-institution-flex">
                 <h3 style="min-width: 250px;"><b>Nestle Toll House</b><br><i style="font-size: .8em;"><br>Eastvale, CA<br>October 2017 - August 2018</i></h3>
-                <div class="exp-institution-info-flex f2">
+                <div class="exp-institution-info-flex ">
                     <p><i>Shift Lead</i></p>
                     <p class="f3">Shift Lead at Nestle Toll House often entailed long hours of working the store. Responsible for all opening/closing operations and training of new employees. Duties included daily interactions with POS Software, customer service, baking, serving food, store finances, and cleaning.
                     </p>
@@ -125,7 +125,7 @@
             </div>
 
             <!--Kumon-->
-            <div class="exp-institution-flex f2">
+            <div class="exp-institution-flex">
                 <h3 style="min-width: 250px;"><b>Kumon North America</b><br><i style="font-size: .8em;"><br>Mira Loma, CA<br>August 2016 - August 2017</i></h3>
                 <div class="exp-institution-info-flex f2">
                     <p><i>Mathematics Tutor</i></p>
