--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <!--VerityStream-->
             <div class="exp-institution-flex">
                 <h3 style="min-width: 250px;"><b>VerityStream</b><br><i style="font-size: .8em;"><br>San Diego, CA<br>June 2021 - November 2021</i></h3>
-                <div class="exp-institution-info-flex f2">
+                <div class="exp-institution-info-flex">
                     <p><i>Software Development Intern</i></p>
                     <p class="f3">Developed CredentialStream, a healthcare provider lifecycle management solution built using .NET and Angular frameworks. On an AGILE development cycle managed in Azure DevOps, I developed front-end solutions in HTML, CSS, and JavaScript to add and fix user-friendly UI and increase page responsiveness. Improved load times by over 25% by optimizing content size and compressing data. Improved back-end services in C# by establishing connections to MS SQL Server ensuring proper population of data on the front-end and updates to SQL scripts.
                     </p>
@@ -127,7 +127,7 @@
             <!--Kumon-->
             <div class="exp-institution-flex">
                 <h3 style="min-width: 250px;"><b>Kumon North America</b><br><i style="font-size: .8em;"><br>Mira Loma, CA<br>August 2016 - August 2017</i></h3>
-                <div class="exp-institution-info-flex f2">
+                <div class="exp-institution-info-flex">
                     <p><i>Mathematics Tutor</i></p>
                     <p class="f3">Educated young students through engaging math curriculum ranging from Algebra to Calculus. Properly articulated ideas and concepts in a manner where students would be engaged and curious with mathematics through the cultivation of their problem-solving and critical thinking skills. Worked with students of all backgrounds and ages, bolstering my ability to teach, learn, and communicate ideas in an all constructive environment.
                     </p>
