--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <!--VerityStream-->
             <div class="exp-institution-flex">
                 <h3 style="min-width: 250px;"><b>VerityStream</b><br><i style="font-size: .8em;"><br>San Diego, CA<br>June 2021 - November 2021</i></h3>
-                <div class="exp-institution-info-flex">
+                <div>
                     <p><i>Software Development Intern</i></p>
                     <p class="f3">Developed CredentialStream, a healthcare provider lifecycle management solution built using .NET and Angular frameworks. On an AGILE development cycle managed in Azure DevOps, I developed front-end solutions in HTML, CSS, and JavaScript to add and fix user-friendly UI and increase page responsiveness. Improved load times by over 25% by optimizing content size and compressing data. Improved back-end services in C# by establishing connections to MS SQL Server ensuring proper population of data on the front-end and updates to SQL scripts.
                     </p>
